--- a/frontend/issueTracker/src/app/user/login/login.component.html
+++ b/frontend/issueTracker/src/app/user/login/login.component.html
@@ -39,7 +39,11 @@
     <br>
     
     <div class="row">
-<div class="col-md-6 col-sm-6 col-6 text-right"><i class="fa fa-facebook-official" style="font-size:48px;color:blue"></i></div>
-<div class="col-md-6 col-sm-6 col-6"><i class="fa fa-google" style="font-size:48px;color:blue"></i></div>
+<!-- <a href="api/v1/app/auth/facebook"> -->
+    <div class="col-md-6 col-sm-6 col-6 text-right" ><i class="fa fa-facebook-official" style="font-size:48px;" (click)="loginViaFb()" ></i></div>
+<!-- </a>  -->
+<div class="col-md-6 col-sm-6 col-6" ><i class="fa fa-google" style="font-size:48px;"></i></div>
     </div>
 </div>
+
+<!-- (click)="loginViaFb()" -->
