--- a/frontend/issueTracker/src/app/user/dashboard/dashboard.component.html
+++ b/frontend/issueTracker/src/app/user/dashboard/dashboard.component.html
@@ -1,1 +1,82 @@
-<p>dashboard works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary mb-4 sticky-top">
+    <a class="navbar-brand">Issue Tracker</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav ">
+            <li class="nav-item">
+                <a class="nav-link" (click)="filterbytitle()">Filter By Title</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" (click)="filterbystatus()">Filter By Status</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" (click)="  filterbydate()">Filter By Date</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" (click)="filterbyreporter()">Filter By Reporter</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/issueDescription']">Report Bug</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/login']" (click)="logout()">LogOut</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="container ">
+    <h1>Hi {{userName}} ! Welcome aboard.</h1>
+    <br> <br>
+    <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon1"  (click)="setSearchText()">Search Issues</button>
+        </div>
+        <input type="text" class="form-control" [(ngModel)]="searchText" >
+      </div>
+<br><br>
+
+
+  <div class="input-group mb-3" *ngIf="ftitle||fstatus||freporter||fdate">
+    <div class="input-group-prepend">
+      <button *ngIf="ftitle" class="btn btn-outline-secondary" type="button" id="button-addon1"  (click)="filterIssues()">Filter Issues By Title</button>
+      <button *ngIf="fstatus" class="btn btn-outline-secondary" type="button" id="button-addon1"  (click)="filterIssues()">Filter Issues By Status</button>
+      <button *ngIf="freporter" class="btn btn-outline-secondary" type="button" id="button-addon1"  (click)="filterIssues()">Filter Issues By Reporter</button>
+      <button *ngIf="fdate" class="btn btn-outline-secondary" type="button" id="button-addon1"  (click)="filterIssues()">Filter Issues By Date</button>
+    
+    
+    </div>
+    <input type="text" class="form-control" [(ngModel)]="filterText" >
+  </div>
+
+<br><br>
+    <div class="table-responsive">
+        <table class="table table-hover ">
+            <thead>
+              <tr>
+                <th scope="col" (click)="sortByTitle()">Title<i class='fa fa-caret-square-o-down' ></i></th>
+                <th scope="col" (click)="sortByStatus()">Status<i class='fa fa-caret-square-o-down' ></i></th>
+                <th scope="col" (click)="sortByReporter()">Reporter<i class='fa fa-caret-square-o-down' ></i></th>
+                <th scope="col" (click)="sortByDate()">Date<i class='fa fa-caret-square-o-down' ></i></th>
+              </tr>
+            </thead>
+            <tbody>
+                
+              <tr *ngFor="let issue of issueInfo" >
+                  <!-- {{issue.issueId}} -->
+                <th scope="row" (click)="show(issue.issueId)">{{issue.title}}</th>
+                <td>{{issue.status}}</td>
+                <td>{{issue.reporterName}}</td>
+                <td>{{issue.creationDateString}}</td>
+              </tr>
+    
+            </tbody>
+          </table>
+    </div>
+    
+</div>
+
