--- a/frontend/issueTracker/src/app/user/signup/signup.component.html
+++ b/frontend/issueTracker/src/app/user/signup/signup.component.html
@@ -1,1 +1,43 @@
-<p>signup works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary mb-4 sticky-top">
+    <a class="navbar-brand">Issue Tracker</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav ">
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/login']">Login</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="container">
+    <h1>Signup Here</h1>
+    <br>
+    <form #logInForm="ngForm" (ngSubmit)="signIn()">
+
+        <div class="form-group">
+            <label for="Username">Username</label>
+            <input type="email" id="name" class="form-control" name="name" placeholder="Enter your username ." [(ngModel)]="username" autofocus required>
+        </div>
+
+        <div class="form-group">
+            <label for="Email">Email</label>
+            <input type="email" id="email" class="form-control" name="email" placeholder="Enter your email id." [(ngModel)]="email" autofocus required>
+        </div>
+
+        <div class="form-group">
+            <label for="Password">Password</label>
+            <input type="password" class="form-control" name="pwd" id="pwd" [(ngModel)]="password" required>
+        </div>
+
+        <button type="submit" class="btn btn-success btn-lg btn-block">Sign In</button>
+        
+    </form>
+    
+</div>
+
+<!-- (click)="loginViaFb()" -->
